# setup.cfg
[metadata]
name = pystf
version = 0.0.1
description = STF can transform to and from any json, xml, yaml, or even python classes with a simple, easy to understand syntax
long_description = file:README.md
url = https://github.com/dgravitate/py-stf
license = MIT

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    poetry

[options.packages.find]
exclude =
    test*
    Dockerfile
    Makefile
    docker*